--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,3 @@
-.main {
-  margin-top: 30px;
-}
-
 //All header of each title
 .title-header {
   h1 {
@@ -49,13 +45,13 @@
     margin-top: 25px;
 
     .list-item {
-      width: 200px !important;
       margin: 8px;
       text-align: left;
+      padding-right: 20px;
 
       img {
         width: 100%;
-        max-height: 200px;
+        max-height: 220px;
       }
 
       h3 {
@@ -107,14 +103,12 @@
   margin: 64px 0;
 
   .category-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    align-content: flex-start;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 20px;
     margin-top: 24px;
   }
+
   .category-item {
     display: flex;
     flex-direction: column;
@@ -123,8 +117,6 @@
     border-radius: 8px;
     border: 1px solid #f3f3f3;
     background: var(--white);
-    flex: 1 1 150px;
-    height: auto;
     box-sizing: border-box;
 
     img {
@@ -168,6 +160,7 @@
     align-items: flex-start;
     align-content: flex-start;
     gap: 30px;
+    margin-top: 24px;
   }
 
   .supplier-item {
@@ -181,11 +174,178 @@
     flex: 1 1 370px;
     height: auto;
     box-sizing: border-box;
+
+    .supplier-image {
+      width: 110px;
+      height: 110px;
+      margin-right: 8px;
+    }
+
+    h3 {
+      color: var(--black);
+      font-size: 14px;
+      font-weight: 600;
+    }
+
+    .find-supplier {
+      display: flex;
+      padding: 0px 8px;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      flex-shrink: 0;
+      width: fit-content;
+      border-radius: 39px;
+      background: #f3f3f3;
+      color: var(--black);
+      margin: 15px 0;
+      font-size: 12px;
+      font-weight: 400;
+    }
+
+    .supplier-location {
+      color: var(--grey);
+      font-size: 14px;
+      font-weight: 500;
+      column-gap: 5px;
+    }
+  }
+}
+
+//Brand
+.brand {
+  .title-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .brand-icon {
+    margin-right: 16px;
+  }
+  .brand-wrapper {
+    .brand-img {
+      max-width: 150px;
+      max-height: 150px;
+    }
+
+    :global {
+      .slick-prev,
+      .slick-next {
+        border-radius: 50%;
+        background: transparent;
+        padding: 10px;
+        z-index: 1;
+      }
+
+      .slick-prev:before,
+      .slick-next:before {
+        font-size: 20px;
+        color: var(--black);
+        opacity: 1;
+        background: rgba(148, 148, 148, 0.5);
+        padding: 10px;
+        border-radius: 50%;
+        line-height: 0;
+      }
+
+      .slick-prev {
+        left: 0;
+      }
+
+      .slick-next {
+        right: 6%;
+      }
+    }
+  }
+}
+
+//For You
+.for-you {
+  .for-you-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    margin: 10px auto 0;
+    grid-gap: 20px;
+  }
+
+  .for-you-item {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    box-sizing: border-box;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    h1 {
+      overflow: hidden;
+      display: -webkit-box;
+      text-overflow: ellipsis;
+      color: var(--black);
+      font-size: 16px;
+      font-weight: 400;
+      margin-bottom: 0;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+    h3 {
+      color: var(--grey);
+      font-size: 12px;
+      font-weight: 400;
+      margin-bottom: 0;
+      span {
+        color: var(--black);
+        font-size: 16px;
+        font-weight: 600;
+      }
+    }
+    .negotiate {
+      color: var(--primary);
+      font-size: 12px;
+      font-weight: 400;
+      border-radius: 20px;
+      background: rgba(250, 90, 0, 0.1);
+      padding: 4px 8px;
+      width: fit-content;
+    }
+    .buy-at-least {
+      color: var(--black);
+      font-size: 12px;
+      font-weight: 500;
+      margin-bottom: 0;
+    }
+    .location {
+      color: var(--grey-black);
+      font-size: 10px;
+      font-weight: 400;
+    }
+    .contact {
+      color: var(--green);
+      font-size: 10px;
+      font-weight: 400;
+    }
   }
 }
 
 @media screen and (max-width: 768px) {
   .banner-right {
     display: none !important;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .title-header {
+    h1 {
+      font-size: 18px;
+    }
+    .see-all {
+      p {
+        font-size: 14px;
+      }
+      img {
+        width: 14px;
+        height: 14px;
+      }
+    }
   }
 }
