--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,10 +5,12 @@
   --primary: #fa5a00;
   --black: #000000;
   --white: #ffffff;
+  --light: #eaeaea;
   --green: #03a500;
   --grey: #a9a9a9;
   --grey-black: #424242;
   --grey-dark: #929292;
+  --grey-light: #d6d6d6;
 }
 a {
   text-decoration: none !important;
