--- a/src/pages/ProductDetails/ProductDetails.module.scss
+++ b/src/pages/ProductDetails/ProductDetails.module.scss
@@ -84,30 +84,6 @@
           font-size: 16px;
           font-weight: 500;
         }
-        .custom-input-number {
-          position: relative;
-          width: 130px;
-          display: flex;
-          align-items: center;
-          border-radius: 32px;
-        }
-        .custom-button {
-          border: none;
-          background: none;
-          font-size: 16px;
-        }
-        .minus {
-          position: absolute;
-          top: 5px;
-          left: 0;
-          z-index: 1;
-        }
-        .plus {
-          position: absolute;
-          right: 0;
-          top: 5px;
-          z-index: 1;
-        }
       }
       .product-btn {
         margin: 16px 0;
@@ -166,6 +142,7 @@
     padding: 8px 0;
   }
 }
+
 .store-wrapper {
   margin-top: 16px;
 
@@ -234,6 +211,14 @@
     .follow-btn {
       margin-top: 32px;
     }
+  }
+}
+
+.store-modal {
+  .modal-title {
+    color: var(--black);
+    font-size: 24px;
+    font-weight: 600;
   }
 }
 @media screen and (max-width: 1200px) {
