--- a/src/pages/ProductDetails/ProductDetails.module.scss
+++ b/src/pages/ProductDetails/ProductDetails.module.scss
@@ -158,8 +158,8 @@
       padding: 24px 0;
 
       img {
-        max-width: 48px;
-        max-height: 48px;
+        width: 48px;
+        height: 48px;
         border-radius: 50%;
       }
 
