--- a/src/pages/ProductDetails/RelatedProduct.module.scss
+++ b/src/pages/ProductDetails/RelatedProduct.module.scss
@@ -19,6 +19,7 @@
   flex-direction: column;
   gap: 8px;
   box-sizing: border-box;
+  max-width: 200px;
   img {
     width: 100%;
     height: auto;
