--- a/src/components/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/DefaultLayout/DefaultLayout.module.scss
@@ -1,3 +1,9 @@
 .content {
-  margin-top: 30px;
+  margin-top: 150px;
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+    margin-top: 120px;
+  }
 }
