--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -79,8 +79,11 @@
 }
 
 @media screen and (max-width: 768px) {
-  .payment-title {
-    margin-top: 16px !important;
+  .footer {
+    .payment-title {
+      margin-top: 16px;
+      font-size: 20px;
+    }
   }
 }
 @media screen and (max-width: 576px) {
