--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -48,7 +48,7 @@
     .list-item {
       margin: 8px;
       text-align: left;
-      padding-right: 20px;
+      padding-right: 15px;
 
       img {
         width: 100%;
@@ -300,7 +300,12 @@
     margin-right: 16px;
   }
   .brand-wrapper {
+    .brand-item {
+      margin: 8px;
+    }
     .brand-img {
+      width: 100%;
+      height: auto;
       max-width: 150px;
       max-height: 150px;
     }
@@ -330,7 +335,7 @@
       }
 
       .slick-next {
-        right: 6%;
+        right: 3%;
       }
     }
   }
@@ -338,6 +343,7 @@
 
 //For You
 .for-you {
+  margin: 60px 0;
   .for-you-wrapper {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -415,6 +421,9 @@
     .category-wrapper {
       grid-template-columns: repeat(6, 1fr);
     }
+    .sidebar {
+      width: 50%;
+    }
   }
 }
 @media screen and (max-width: 1024px) {
@@ -448,19 +457,24 @@
   .banner-right {
     display: none !important;
   }
-  .supplier {
-    .supplier-item {
-      flex: 0 1 calc(100% - 20px);
+  .hot-deal {
+    margin-top: 20px;
+    .hot-deal-icon {
+      margin-right: 3px;
     }
-  }
-  .for-you {
-    .for-you-wrapper {
-      grid-template-columns: repeat(2, 1fr);
+    .hot-deal-wrapper {
+      margin-top: 0;
+      .list-item {
+        margin: 5px;
+        padding-right: 0;
+      }
     }
   }
   .category {
+    margin: 30px 0;
     .category-wrapper {
       grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
     }
     .see-all-wrapper {
       .cate-wrapper {
@@ -469,6 +483,45 @@
     }
     .sidebar {
       width: 100%;
+    }
+  }
+  .brand {
+    .brand-icon {
+      margin-right: 3px;
+    }
+    .brand-wrapper {
+      .brand-item {
+        margin: 5px;
+      }
+      :global {
+        .slick-prev:before,
+        .slick-next:before {
+          font-size: 16px;
+          padding: 6px;
+          padding-top: 8px;
+        }
+        .slick-prev {
+          left: -10px;
+        }
+      }
+    }
+  }
+
+  .supplier {
+    margin: 30px 0;
+    .supplier-wrapper {
+      gap: 10px;
+      margin-top: 15px;
+    }
+    .supplier-item {
+      flex: 0 1 calc(100%);
+    }
+  }
+  .for-you {
+    margin: 30px 0;
+    .for-you-wrapper {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
     }
   }
 }
