--- a/src/pages/ProductDetails/ProductDetails.module.scss
+++ b/src/pages/ProductDetails/ProductDetails.module.scss
@@ -17,7 +17,7 @@
     .sub-images {
       margin-top: 15px;
       display: flex;
-      justify-content: space-between;
+      gap: 5px;
     }
 
     .sub-image {
