--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -8,6 +8,9 @@
   background-color: var(--white);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.no-box-shadow {
+  box-shadow: none;
+}
 .icon-wrapper {
   color: var(--black);
   font-weight: 500;
