--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,7 @@
   --primary: #fa5a00;
   --black: #000000;
   --white: #ffffff;
+  --white-light: #f3f3f3;
   --light: #eaeaea;
   --green: #03a500;
   --grey: #a9a9a9;
