--- a/src/pages/StoreManagement/StoreManagement.module.scss
+++ b/src/pages/StoreManagement/StoreManagement.module.scss
@@ -13,6 +13,9 @@
     border: 1px solid #eaeaea;
     background: #f3f3f3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    .title {
+      color: var(--black) !important;
+    }
   }
   .item-wrapper {
     display: flex;
@@ -27,9 +30,37 @@
       font-weight: 500;
     }
   }
+  .item-with-sub {
+    align-items: flex-start;
+  }
+  .title-with-sub {
+    margin-top: 3px;
+    width: 100%;
+  }
+  .dropdown {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    .dropdown-item {
+      width: 100%;
+      color: var(--grey-dark);
+      font-size: 16px;
+      font-weight: 400;
+      padding-left: 35px;
+      cursor: pointer;
+    }
+    .sub-item-active {
+      border-radius: 4px;
+      background: var(--light);
+      color: var(--primary);
+      font-weight: 500;
+    }
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .store-management {
     display: block;
     width: 100%;
