--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -52,12 +52,28 @@ body {
   text-align: center !important;
   padding: 0;
 }
+.error-message {
+  margin-bottom: 0;
+  margin-top: 3px;
+  color: red;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+//custom modal
+.modal-dialog {
+  max-width: 75% !important;
+}
+
 @media screen and (max-width: 992px) {
   .slick-dots li {
     margin: 0;
   }
   .slick-dots li button:before {
     font-size: 15px !important;
+  }
+  .modal-dialog {
+    max-width: 100% !important;
   }
 }
 @media screen and (max-width: 475px) {
