--- a/src/pages/Category/Category.module.scss
+++ b/src/pages/Category/Category.module.scss
@@ -20,7 +20,7 @@
 .product {
   .product-wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     margin: 10px auto;
     grid-gap: 25px;
 
@@ -108,13 +108,44 @@
     }
   }
 }
-
+@media screen and (max-width: 1200px) {
+  .product {
+    .product-wrapper {
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+    }
+  }
+}
+@media screen and (max-width: 992px) {
+  .product {
+    .product-wrapper {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
 @media screen and (max-width: 768px) {
-  .product-wrapper {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)) !important;
-    grid-gap: 20px !important;
+  .product {
+    .product-wrapper {
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
+    }
   }
   .layout-right {
     padding: 0;
+  }
+}
+@media screen and (max-width: 560px) {
+  .product {
+    .product-wrapper {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+@media screen and (max-width: 360px) {
+  .product {
+    .product-wrapper {
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 15px;
+    }
   }
 }
