--- a/src/pages/SelectPassword/SelectPassword.module.scss
+++ b/src/pages/SelectPassword/SelectPassword.module.scss
@@ -93,6 +93,13 @@
     }
   }
 }
+.error-message {
+  margin-bottom: 0;
+  margin-top: 3px;
+  color: red;
+  font-size: 12px;
+  font-weight: 500;
+}
 @media screen and (max-width: 1200px) {
   .login-details {
     width: 50%;
