--- a/src/pages/StoreManagement/subComponent/SupplierAll/SupplierAll.module.scss
+++ b/src/pages/StoreManagement/subComponent/SupplierAll/SupplierAll.module.scss
@@ -72,6 +72,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      width: 100%;
       h5 {
         color: var(--black);
         font-size: 14px;
