--- a/src/pages/HotDeal/HotDeal.module.scss
+++ b/src/pages/HotDeal/HotDeal.module.scss
@@ -25,15 +25,33 @@
     margin: 10px auto;
     grid-gap: 25px;
 
+    .heart-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      transition: transform 0.2s ease-in-out;
+      opacity: 0;
+      &.active-heart {
+        opacity: 1;
+      }
+    }
+    .product-items:hover .heart-icon {
+      opacity: 1;
+      transform: scale(1.1);
+    }
     .product-items {
+      position: relative;
       display: flex;
       flex-direction: column;
       gap: 8px;
       box-sizing: border-box;
+      height: 100%;
+      justify-content: space-between;
 
-      img {
+      .product-img {
         width: 100%;
-        height: auto;
+        height: 200px;
       }
 
       .product-title {
