--- a/src/pages/StoreInformation/RelatedInformation.module.scss
+++ b/src/pages/StoreInformation/RelatedInformation.module.scss
@@ -92,15 +92,31 @@
     margin: 15px auto 0;
     grid-gap: 15px;
 
+    .heart-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      transition: transform 0.2s ease-in-out;
+      opacity: 0;
+      &.active-heart {
+        opacity: 1;
+      }
+    }
+    .product-items:hover .heart-icon {
+      opacity: 1;
+      transform: scale(1.1);
+    }
     .product-items {
+      position: relative;
       display: flex;
       flex-direction: column;
       gap: 8px;
       box-sizing: border-box;
 
-      img {
+      .product-img {
         width: 100%;
-        height: auto;
+        height: 190px;
       }
 
       .product-title {
@@ -202,13 +218,29 @@
     margin: 10px auto;
     grid-gap: 25px;
 
+    .heart-icon {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      cursor: pointer;
+      transition: transform 0.2s ease-in-out;
+      opacity: 0;
+      &.active-heart {
+        opacity: 1;
+      }
+    }
+    .product-items:hover .heart-icon {
+      opacity: 1;
+      transform: scale(1.1);
+    }
     .product-items {
+      position: relative;
       display: flex;
       flex-direction: column;
       gap: 8px;
       box-sizing: border-box;
 
-      img {
+      .product-img {
         width: 100%;
         height: auto;
       }
