--- a/src/pages/StoreManagement/subComponent/ProductAdd/ProductAdd.module.scss
+++ b/src/pages/StoreManagement/subComponent/ProductAdd/ProductAdd.module.scss
@@ -72,9 +72,20 @@
     position: relative;
     height: 100px;
     border-radius: 8px;
-    overflow: hidden;
   }
-
+  .remove-image-button {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    border: none;
+    background: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 10px;
+    font-weight: bold;
+    padding: 3px 5px;
+    cursor: pointer;
+  }
   .image-preview {
     max-width: 100px;
     width: 100%;
