--- a/src/pages/StoreManagement/subComponent/ProductAll/ProductAll.module.scss
+++ b/src/pages/StoreManagement/subComponent/ProductAll/ProductAll.module.scss
@@ -139,8 +139,10 @@ td {
   .status-checkbox:before {
     content: '';
     position: absolute;
-    width: 20px;
-    height: 20px;
+    top: 2px;
+    left: 2px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
     background-color: var(--white);
     transition: transform 0.3s;
