--- a/src/pages/StoreManagement/subComponent/ProductAdd/ProductAdd.module.scss
+++ b/src/pages/StoreManagement/subComponent/ProductAdd/ProductAdd.module.scss
@@ -25,7 +25,7 @@
   margin-bottom: 3px;
 }
 .input-field {
-  color: var(--grey-dark);
+  color: var(--black);
   font-size: 16px;
   font-weight: 400;
   border-radius: 8px;
