--- a/src/pages/SupplierDetail/SupplierDetail.module.scss
+++ b/src/pages/SupplierDetail/SupplierDetail.module.scss
@@ -161,7 +161,7 @@
   margin-bottom: 3px;
 }
 .send-request-input-field {
-  color: var(--grey-dark);
+  color: var(--black);
   font-size: 16px;
   font-weight: 400;
   border-radius: 8px;
