--- a/src/components/Loading/Loading.module.scss
+++ b/src/components/Loading/Loading.module.scss
@@ -6,8 +6,8 @@
 }
 
 .spinner {
-  border: 8px solid #f3f3f3; /* Light grey */
-  border-top: 8px solid #3498db; /* Blue */
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid var(--primary);
   border-radius: 50%;
   width: 60px;
   height: 60px;
