--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -79,6 +79,9 @@ body {
   z-index: 9999;
 }
 
+canvas {
+  width: 100% !important;
+}
 @media screen and (max-width: 992px) {
   .slick-dots li {
     margin: 0;
