--- a/src/pages/StoreManagement/component/Message/Message.module.scss
+++ b/src/pages/StoreManagement/component/Message/Message.module.scss
@@ -68,6 +68,7 @@
     .content {
       display: flex;
       flex-direction: column;
+      width: 100%;
       gap: 5px;
       .name {
         color: #243b53;
