--- a/src/pages/StoreManagement/component/Statistics/Statistics.module.scss
+++ b/src/pages/StoreManagement/component/Statistics/Statistics.module.scss
@@ -4,8 +4,8 @@
   gap: 20px;
 }
 .summary-boxes {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
   align-items: center;
   gap: 10px;
   .summary-box {
@@ -54,7 +54,11 @@
     font-weight: 700;
   }
 }
-
+@media screen and (max-width: 1200px) {
+  .summary-boxes {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media screen and (max-width: 768px) {
   .summary-boxes {
     .summary-box {
@@ -68,12 +72,13 @@
     }
   }
   .chart-container {
-    padding: 15px;
+    padding: 8px;
     h3 {
-      font-weight: 400;
+      font-size: 14px;
+      margin-bottom: 8px;
     }
     p {
-      font-size: 18px;
+      font-size: 16px;
     }
   }
 }
