--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -42,6 +42,7 @@
   border-radius: 27px;
   border: 1px solid var(--primary);
   padding: 4px 8px;
+  background: transparent;
   span {
     color: var(--primary);
     font-size: 12px;
