--- a/src/pages/StoreManagement/component/CreateProfile/CreateProfile.module.scss
+++ b/src/pages/StoreManagement/component/CreateProfile/CreateProfile.module.scss
@@ -94,7 +94,7 @@
         padding-left: 16px;
         font-size: 14px;
         font-weight: 400;
-        color: var(--grey-dark);
+        color: var(--black);
       }
       .select-field {
         height: 40px;
@@ -130,7 +130,7 @@
         padding-left: 10px;
         font-size: 14px;
         font-weight: 400;
-        color: var(--grey-dark);
+        color: var(--black);
       }
     }
   }
@@ -156,9 +156,9 @@
       border: 0.5px solid var(--grey-light);
       background: var(--white);
       padding: 16px;
-      color: var(--grey-dark);
+      color: var(--black);
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 400;
     }
   }
 }
