--- a/src/pages/StoreManagement/component/Home/Home.module.scss
+++ b/src/pages/StoreManagement/component/Home/Home.module.scss
@@ -86,7 +86,26 @@
     border: none;
   }
 }
-
+.chart-container {
+  margin-top: 32px;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 0px 2px 6px 0px rgba(13, 10, 44, 0.08);
+  padding: 20px;
+  h3 {
+    color: #9291a5;
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+  p {
+    color: #1e1b39;
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-size: 22px;
+    font-weight: 700;
+  }
+}
 @media screen and (max-width: 992px) {
   .list-job-wrapper {
     .list-job {
@@ -131,6 +150,17 @@
       .note-title {
         font-size: 14px;
       }
+    }
+  }
+  .chart-container {
+    margin-top: 20px;
+    padding: 8px;
+    h3 {
+      font-size: 14px;
+      margin-bottom: 8px;
+    }
+    p {
+      font-size: 16px;
     }
   }
 }
