--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -11,6 +11,9 @@
 .no-box-shadow {
   box-shadow: none;
 }
+.search-form {
+  position: relative;
+}
 .icon-wrapper {
   color: var(--black);
   font-weight: 500;
