--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -586,7 +586,7 @@
   .hot-deal {
     .hot-deal-wrapper {
       .list-item {
-        img {
+        .product-img {
           height: 160px;
         }
       }
@@ -594,7 +594,7 @@
   }
   .for-you {
     .for-you-item {
-      img {
+      .product-img {
         height: 160px;
       }
     }
